<resources>
    <string name="app_name">TanTan</string>
    <!--  首页  -->
    <string name="home">主页</string>
    <string name="exercise">运动</string>
    <string name="equipment">设备</string>
    <string name="mine">我的</string>
    <string name="gps">请打开手机gps功能</string>
    <!--  登陆  -->
    <string name="regist">注册</string>
    <string name="load">登陆</string>
    <string name="registbyphone">手机注册</string>
    <string name="registbyemail">邮箱注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="reset_pwdbyphone">通过手机重置密码</string>
    <string name="reset_pwdbyemail">通过邮箱重置密码</string>
    <string name="verifybyemail">邮箱验证</string>
    <string name="verifybyphone">手机验证</string>
    <string name="bindbyphone">手机绑定</string>
    <string name="bindbyemail">手机号验证</string>
    <string name="bind">绑定</string>
    <string name="next">下一步</string>
    <string name="change_pwd">修改密码</string>
    <string name="name">用户昵称</string>
    <string name="regist_success">注册成功</string>
    <string name="load_success">登陆成功</string>
    <string name="load_text">请输入手机号码/邮箱号码</string>
    <string name="patten_username">请输入正确格式的用户名</string>
    <string name="password_success">密码修改成功</string>
    <string name="exit">确定退出吗？</string>
    <string name="confirm">确定</string>

    <!--设备 -->
    <string name="ep_setup">设备</string>
    <string name="ep_msg_push">消息推送</string>
    <string name="ep_known_call">来电识别</string>
    <string name="ep_clock_list">日常闹钟</string>
    <string name="clock">闹钟</string>
    <string name="ep_question_handler">问题诊断</string>
    <string name="ep_hard_update">固件更新</string>
    <string name="ep_basic_settings">基础设置</string>
    <string name="ep_msg_push_top">请选择要推送的消息</string>
    <string name="ep_question_content">请的下方写下您的反馈意见：</string>
    <string name="ep_question_contact">手机号码/邮箱号码</string>
    <string name="ep_question_contact_title">请留下您的联系方式</string>
    <string name="btn_submit">提交</string>
    <string name="add">添加</string>
    <string name="ep_connected">已连接</string>
    <string name="ep_not_connected">未连接</string>
    <string name="default_ep_name">BL_default</string>
    <string name="not_supported_longseat">暂不支持久坐模式，请升级后再尝试</string>
    <string name="max_clock">设备最多支持三个闹钟，请关闭后再添加！</string>
    <string name="connected_failed">连接设备失败，请重新尝试！</string>
    <string name="question_failed">反馈信息发送失败，请重新尝试！</string>
    <string name="question_ok">反馈意见发送成功，谢谢您的参与！</string>
    <string name="pre_connecte">请连接手环后查看</string>
    <string name="no_connecte">请连接手环后重试</string>

    <!--注册 -->
    <string name="phone">请输入手机号码</string>
    <string name="email">请输入邮箱号码</string>
    <string name="new_pwd">输入新密码 </string>
    <string name="firm_pwd">确认新密码</string>
    <string name="ok">完成</string>
    <string name="pwd">请输入6-16位密码</string>
    <string name="pattern_email">请输入正确邮箱格式</string>
    <string name="loading">正在加载中</string>
    <string name="wrong_password">两次输入的密码不一致</string>
    <string name="no_code">请输入验证码</string>
    <string name="no_net">请连接网络后重试</string>

    <string name="ep_search_btn">  搜索设备</string>
    <string name="ep_searching_btn">  搜索中...</string>
    <string name="dianliang">100%</string>

    <!--我的 -->
    <string name="active_day">活跃天数- </string>
    <string name="rate">达标率- </string>
    <string name="stepbyweek">本周步数 </string>
    <string name="best_day">最佳日 </string>
    <string name="best_week">最佳周 </string>
    <string name="best_month">最佳月 </string>
    <string name="bind_account">账号绑定 </string>
    <string name="exit_account">账号登出 </string>
    <string name="img_success">头像修改成功 </string>
    <string name="relieve_bind">已绑定 </string>
    <string name="remove_ok">确定解除绑定吗? </string>
    <string name="exit_ok">确定账号登出吗? </string>
    <string name="ceshi22">确定账号登出吗? </string>


    <string name="phone_number">手机账号</string>
    <string name="email_number">邮箱账号</string>
    <string name="bindbyphone_number">手机账号绑定</string>
    <string name="bindbyemail_number">邮箱账号绑定</string>
    <string name="goto_bind">去绑定</string>
    <string name="person_data">设置个人资料</string>
    <string name="local_photo">本地相册</string>
    <string name="camera">相机</string>
    <string name="hint">提示</string>
    <string name="setting">去设置</string>
    <string name="canecl">取消</string>
    <string name="camelbypermisstion">为了您能使用照相功能，请开启相机权限！</string>
    <string name="locationbypermisstion">为了您能使用手环功能，请开启位置权限！</string>


    <!--  运动  -->
    <string name="click_end">请点击结束后退出！</string>
    <string name="short_distance">运动距离太少,是否继续</string>
    <string name="save_map">是否结束并保存此次运动</string>
    <string name="tuichu">退出</string>
    <string name="goin">继续</string>
    <string name="no_path">没有记录到路径</string>
    <string name="ratedata">心率数据</string>
    <string name="exercise_list">活动列表</string>
    <string name="exercise_detail">运动列表</string>
    <string name="date">日历</string>
    <string name="run_out">室外跑</string>
    <string name="rideing">骑行</string>
    <string name="mountaineering">登山</string>

    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>

    <string name="isBluetoothSupport">设备不支持Bluetooth4.0</string>
    <!--loadDataDialog-->
    <string name="logining">正在登录...</string>
    <string name="initing">保存数据中...</string>
    <string name="uping">数据上传中...</string>
    <string name="cleaning">缓存清理中...</string>
    <string name="authoring">授权中...</string>
    <string name="dealing">处理中...</string>
    <string name="linking">连接中...</string>
    <string name="linkConnect">连接成功</string>
    <string name="linkFailed">连接失败</string>
    <string name="braceletTimeOut">连接超时</string>
    <string name="braceletbreak">连接断开</string>
    <string name="syncTimeOut">同步超时...</string>
    <string name="syncFailed">同步失败...</string>
    <string name="syncFinish">同步完成...</string>

    <string name="day_radio_button">日</string>
    <string name="week_radio_button">周</string>
    <string name="month_radio_button">月</string>
    <string name="sleep_data">睡眠数据</string>
    <string name="sleep">睡眠</string>
    <string name="sports">运动</string>
    <string name="sports_data">运动数据</string>
    <string name="sleep_jiuqin">就寝</string>
    <string name="sleep_getup">起床</string>
    <string name="moring">上午</string>
    <string name="afternoon">下午</string>
    <string name="plan_sleep_time">计划睡眠</string>
    <string name="actual_sleep_time">实际睡眠</string>
    <string name="sleep_analysis">睡眠分析</string>
    <string name="sleep_deep">深睡</string>
    <string name="sleep_simple">浅睡</string>
    <string name="sleep_aweak">清醒</string>
    <string name="sleep_all_time">睡眠总时长</string>
    <string name="sleep_average_day">每日平均睡眠时间</string>
    <string name="sleep_score_week">睡眠评分(周)</string>
    <string name="sleep_score_month">睡眠评分(月)</string>
    <string name="rate_avg">平均心率</string>
    <string name="rate_low">最低</string>
    <string name="rate_hight">最高</string>
    <string name="blood_time">时间</string>
    <string name="blood_low">低压</string>
    <string name="blood_hight">高压</string>
    <string name="no_data">暂无</string>
    <string name="no_sleep_data">暂无睡眠数据</string>

</resources>
